Increase mobile slider spacing to prevent overlap
- Increased margin-top for mobile slider containers:
  - Tablets (≤767px): margin-top increased from 120px to 200px
  - Phones (≤479px): margin-top increased from 100px to 180px
- Creates more space between cycling text and food photo
- Prevents overlap issues on mobile devices
- Maintains centered positioning and smaller image size

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -592,7 +592,7 @@
   }
   
   .slider-image-container {
-    margin-top: 120px;
+    margin-top: 200px;
     height: 60%;
     justify-content: center;
     align-items: center;
@@ -611,7 +611,7 @@
   }
   
   .slider-image-container {
-    margin-top: 100px;
+    margin-top: 180px;
     height: 50%;
     justify-content: center;
     align-items: center;
